# pbdZMQ

./: .Rbuildignore  .gitignore  .gitlab-ci.yml  .travis.yml  ChangeLog  DESCRIPTION  INSTALL  INSTALL.solaris  NAMESPACE  README  README.md  appveyor.yml  cleanup  configure  configure.ac
R/: 000_globalVariables.r  111_control.r  111_control_message.r  111_control_sendrecv.r  111_control_socket_option.r  111_control_socket_type.r  111_pbd_opt.r  222_export_env.r  222_export_opt.r  R_zmq_context.r  R_zmq_message.r  R_zmq_poll.r  R_zmq_poll2.r  R_zmq_sendrecv.r  R_zmq_sendrecv_multipart.r  R_zmq_socket.r  R_zmq_transfer.r  R_zmq_transfers.r  R_zmq_utility.r  address.r  base_ls.r  get_conf.r  get_conf_zmq.r  overwrite_pkgso_rpath.r  overwrite_shpkg.r  pbdZMQ-package.r  pyzmq_wrapper.r  random_port.r  rzmq_wrapper.r  shellexec_wcc.r  zmq.r  zzz.r.in
R/windows/: zzz.r
data/: control_message.r  control_sendrecv.r  control_socket_option.r  control_socket_type.r  envir.r
demo/: 00Index  check_eintr.r  hwclient.r  hwserver.r  iter_try.r  mpclient.r  mpserver.r  mspoller.r  msreader.r  tasksink.r  taskvent.r  taskwork.r  tryCatch.r  wuclient.r  wuserver.r
inst/: CITATION
inst/doc/: pbdZMQ-guide.Rnw
inst/examples/: README
inst/examples/cs/: client.r  server.r
inst/examples/reqrep/: client.r  pyzmq_client.r  pyzmq_server.r  rzmq_server.r  server.r
man/: 00_pbdZMQ-package.Rd  11_d_control.Rd  a0_a_pbdZMQ-package.Rd  a0_b_control.Rd  a0_b_pbd_opt.Rd  a0_c_context.Rd  a0_c_options.Rd  a0_context.Rd  a0_d_context.Rd  a1_socket.Rd  a2_message.Rd  address.Rd  b0_sendrecv.Rd  b0_sendrecvfile.Rd  b1_sendrecvfile.Rd  b2_sendrecv_multipart.Rd  b2_sendrecvdir.Rd  b3_poll.Rd  b4_poll2.Rd  pyzmq.Rd  random_port.Rd  u0_shellexec.wcc.Rd  xx_czmq_wrapper.Rd  xx_ls_wrapper.Rd  xx_rzmq_wrapper.Rd  xx_utility.Rd  yy_rzmq_wrapper.Rd  zz_overwrite_pkgso_rpath.Rd  zz_overwrite_shpkg.Rd  zz_zmq_control.Rd  zz_zmq_flags.Rd  zz_zmq_internal.Rd
src/: Makevars.in  Makevars.win  R_cxx_dummy.cc  R_zmq.h  R_zmq_context.c  R_zmq_message.c  R_zmq_poll.c  R_zmq_poll2.c  R_zmq_sendrecv.c  R_zmq_socket.c  R_zmq_transfer.c  R_zmq_utility.c  build_zmq  build_zmq.in  build_zmq_linux.inc  build_zmq_mingw.inc  chmod_zmq.inc  install.libs.R  install.libs.R.in  pkg.m4  shellexec_wcc.c  zzz.c
src/zmqsrc/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
src/zmqsrc.win/: Makefile  platform.hpp
src/zmqsrc.win32/: include_zmq.h  src_Makefile  src_platform.hpp
src/zmqsrc.win64/: src_Makefile  src_libzmq.pc  src_platform.hpp
src/zmqsrc/config/: lt_obsolete.m4
src/zmqsrc/src/: Makefile.am  Makefile.in  curve_client.cpp  curve_server.cpp  msg.cpp  zzz.cpp
tests/: address.R  cs.R  ports.R  send_recv.R  send_recv_rzmq.R
vignettes/: build_pdf.sh  pbdZMQ-guide.Rnw
vignettes/pbdZMQ-include/: 01-acknowledgement.tex  01-copyright.tex  01-introduction.tex  02-installation.tex  03-example.tex  04-backward.tex  05-cs.tex  05-cs.tex.backup  06-solaris.tex  99-faq.tex  pbdZMQ.bib
